feat: support for retry scope (#842)